--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,48 @@
 @font-face {
   font-family: 'Mukta';
-  font-style: normal;
+  src:
+    local('Mukta Regular'),
+    local('Mukta-Regular'),
+    url('/fonts/Mukta-Regular.woff2') format('woff2');
   font-weight: 400;
+  font-style: normal;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/mukta/v16/iJWKBXyXfDDVXbnBrXw.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD;
 }
 
 @font-face {
   font-family: 'Mukta';
-  font-style: normal;
+  src:
+    local('Mukta Medium'),
+    local('Mukta-Medium'),
+    url('/fonts/Mukta-Medium.woff2') format('woff2');
   font-weight: 500;
+  font-style: normal;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/mukta/v16/iJWHBXyXfDDVXbEyjmmd8WA.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD;
 }
 
 @font-face {
   font-family: 'Mukta';
-  font-style: normal;
+  src:
+    local('Mukta SemiBold'),
+    local('Mukta-SemiBold'),
+    url('/fonts/Mukta-SemiBold.woff2') format('woff2');
   font-weight: 600;
+  font-style: normal;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/mukta/v16/iJWHBXyXfDDVXbEeiWmd8WA.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD;
 }
 
 @font-face {
   font-family: 'Mukta';
-  font-style: normal;
+  src:
+    local('Mukta Bold'),
+    local('Mukta-Bold'),
+    url('/fonts/Mukta-Bold.woff2') format('woff2');
   font-weight: 700;
+  font-style: normal;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/mukta/v16/iJWHBXyXfDDVXbF6iGmd8WA.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD;
 }
 
