--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('/fonts/Mukta-Bold.woff2') format('woff2');
+  src: url('/fonts/Mukta-Regular.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD;
 }
 
