--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-display: swap;
   src: url('/fonts/Mukta-Regular.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD;
+  unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD, U+221E;
 }
 
 @font-face {
@@ -13,7 +13,7 @@
   font-weight: 500;
   font-display: swap;
   src: url('/fonts/Mukta-Medium.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD;
+  unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD, U+221E;
 }
 
 @font-face {
@@ -22,7 +22,7 @@
   font-weight: 600;
   font-display: swap;
   src: url('/fonts/Mukta-SemiBold.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD;
+  unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD, U+221E;
 }
 
 @font-face {
@@ -31,7 +31,7 @@
   font-weight: 700;
   font-display: swap;
   src: url('/fonts/Mukta-Bold.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD;
+  unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD, U+221E;
 }
 
 * {
