--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
   font-family: 'Mukta';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
-  src: url('/fonts/Mukta-Regular.woff2') format('woff2');
+  font-display: fallback;
+  src: url(https://fonts.gstatic.com/s/mukta/v16/iJWKBXyXfDDVXbnBrXw.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD, U+221E;
 }
 
@@ -11,8 +11,8 @@
   font-family: 'Mukta';
   font-style: normal;
   font-weight: 500;
-  font-display: swap;
-  src: url('/fonts/Mukta-Medium.woff2') format('woff2');
+  font-display: fallback;
+  src: url(https://fonts.gstatic.com/s/mukta/v16/iJWHBXyXfDDVXbEyjmmd8WA.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD, U+221E;
 }
 
@@ -20,8 +20,8 @@
   font-family: 'Mukta';
   font-style: normal;
   font-weight: 600;
-  font-display: swap;
-  src: url('/fonts/Mukta-SemiBold.woff2') format('woff2');
+  font-display: fallback;
+  src: url(https://fonts.gstatic.com/s/mukta/v16/iJWHBXyXfDDVXbEeiWmd8WA.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD, U+221E;
 }
 
@@ -29,8 +29,8 @@
   font-family: 'Mukta';
   font-style: normal;
   font-weight: 700;
-  font-display: swap;
-  src: url('/fonts/Mukta-Bold.woff2') format('woff2');
+  font-display: fallback;
+  src: url(https://fonts.gstatic.com/s/mukta/v16/iJWHBXyXfDDVXbF6iGmd8WA.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+02DA, U+02DC, U+2000-206F, U+2191, U+2193, U+FFFD, U+221E;
 }
 
